[gd_scene load_steps=3 format=3 uid="uid://x56nhms7p4tf"]

[ext_resource type="Script" path="res://trigger_area.gd" id="1_aj0la"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n5xwq"]

[node name="TriggerArea" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_aj0la")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_n5xwq")

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0
text = "Trigger area"

[node name="StateLabel" type="Label" parent="."]
visible = false
offset_left = 9.0
offset_top = 36.0
offset_right = 49.0
offset_bottom = 59.0
text = "State:"

[node name="Triggered" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = 72.0
offset_right = 50.0
offset_bottom = 95.0
text = "Triggered: "

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
